Penambahan profil teman

--- a/friends.html
+++ b/friends.html
@@ -31,7 +31,7 @@
                 <h3>Ammaar</h3></a><a class='profile-card' href='profiles/teman-05.html'>
                     <img src='assets/images/teman-05.jpg'>
                 <h3>Anggie Nisrina Afifa</h3></a><a class='profile-card' href='profiles/teman-06.html'>
-                    <img src='assets/images/teman-06.jpg'>
+                    <img src='assets/images/6.jpg'>
                 <h3>Annisa</h3></a><a class='profile-card' href='profiles/teman-07.html'>
                     <img src='assets/images/teman-07.jpg'>
                 <h3>B. Luna Cahyaning Ratri</h3></a><a class='profile-card' href='profiles/teman-08.html'>
@@ -39,7 +39,7 @@
                 <h3>Bintang Kusuma Ramadani</h3></a><a class='profile-card' href='profiles/teman-09.html'>
                     <img src='assets/images/teman-09.jpg'>
                 <h3>Charissa Fidelya Amirah</h3></a><a class='profile-card' href='profiles/teman-10.html'>
-                    <img src='assets/images/teman-10.jpg'>
+                    <img src='assets/images/10.jpg'>
                 <h3>Vyaa</h3></a><a class='profile-card' href='profiles/teman-11.html'>
                     <img src='assets/images/teman-11.jpg'>
                 <h3>Dyandra Khansa Permana</h3></a><a class='profile-card' href='profiles/teman-12.html'>
@@ -53,17 +53,17 @@
                 <h3>Hime</h3></a><a class='profile-card' href='profiles/teman-16.html'>
                     <img src='assets/images/teman-16.jpg'>
                 <h3>Ibnu Herli Islamey</h3></a><a class='profile-card' href='profiles/teman-17.html'>
-                    <img src='assets/images/teman-17.jpg'>
-                <h3>Ika Risa Yuniawati</h3></a><a class='profile-card' href='profiles/teman-18.html'>
-                    <img src='assets/images/teman-18.jpg'>
+                    <img src='assets/images/17.JPG'>
+                <h3>Risa</h3></a><a class='profile-card' href='profiles/teman-18.html'>
+                    <img src='assets/images/18.jpg'>
                 <h3>Ikhsan</h3></a><a class='profile-card' href='profiles/teman-19.html'>
-                    <img src='assets/images/teman-19.jpg'>
-                <h3>Isyfa Lana Afifah</h3></a><a class='profile-card' href='profiles/teman-20.html'>
+                    <img src='assets/images/19.jpg'>
+                <h3>Syfa</h3></a><a class='profile-card' href='profiles/teman-20.html'>
                     <img src='assets/images/20.png'>
                 <h3>Joy</h3></a><a class='profile-card' href='profiles/teman-21.html'>
                     <img src='assets/images/teman-21.jpg'>
                 <h3>Kareema Edna Annisa Hanif</h3></a><a class='profile-card' href='profiles/teman-22.html'>
-                    <img src='assets/images/teman-22.jpg'>
+                    <img src='assets/images/22.png'>
                 <h3>Khairul</h3></a><a class='profile-card' href='profiles/teman-23.html'>
                     <img src='assets/images/teman-23.jpg'>
                 <h3>Leonardo Radya Putra</h3></a><a class='profile-card' href='profiles/teman-24.html'>
@@ -77,8 +77,8 @@
                 <h3>Michelle</h3></a><a class='profile-card' href='profiles/teman-28.html'>
                     <img src='assets/images/teman-28.jpg'>
                 <h3>Muhammad Aditya Pramulia Herlambang</h3></a><a class='profile-card' href='profiles/teman-29.html'>
-                    <img src='assets/images/teman-29.jpg'>
-                <h3>Muhammad Alvin Arasy</h3></a><a class='profile-card' href='profiles/teman-30.html'>
+                    <img src='assets/images/29.JPG'>
+                <h3>Alvin</h3></a><a class='profile-card' href='profiles/teman-30.html'>
                     <img src='assets/images/teman-30.jpg'>
                 <h3>Muhammad Carlito Trevan Harianto</h3></a><a class='profile-card' href='profiles/teman-31.html'>
                     <img src='assets/images/teman-31.jpg'>
@@ -91,8 +91,8 @@
                 <h3>Muhammad Zidni Kholisulhuda</h3></a><a class='profile-card' href='profiles/teman-35.html'>
                     <img src='assets/images/teman-35.jpg'>
                 <h3>Nadia Talitha Dewi Kusuma</h3></a><a class='profile-card' href='profiles/teman-36.html'>
-                    <img src='assets/images/teman-36.jpg'>
-                <h3>Nanda Novita Az Zahra</h3></a><a class='profile-card' href='profiles/teman-37.html'>
+                    <img src='assets/images/36.jpg'>
+                <h3>Nanda</h3></a><a class='profile-card' href='profiles/teman-37.html'>
                     <img src='assets/images/37.png'>
                 <h3>Naufal</h3></a><a class='profile-card' href='profiles/teman-38.html'>
                     <img src='assets/images/teman-38.jpg'>
@@ -113,7 +113,7 @@
                 <h3>Risla Maulida</h3></a><a class='profile-card' href='profiles/teman-46.html'>
                     <img src='assets/images/teman-46.jpg'>
                 <h3>Rio</h3></a><a class='profile-card' href='profiles/teman-47.html'>
-                    <img src='assets/images/teman-47.jpg'>
+                    <img src='assets/images/47.JPG'>
                 <h3>Shafa</h3></a><a class='profile-card' href='profiles/teman-48.html'>
                     <img src='assets/images/teman-48.jpg'>
                 <h3>Simforianus Selvario Natama</h3></a><a class='profile-card' href='profiles/teman-49.html'>
@@ -123,8 +123,8 @@
                 <h3>Safira</h3></a><a class='profile-card' href='profiles/teman-51.html'>
                     <img src='assets/images/teman-51.jpg'>
                 <h3>Yesaya Yoel Christian</h3></a><a class='profile-card' href='profiles/teman-52.html'>
-                    <img src='assets/images/teman-52.jpg'>
-                <h3>Yusa Fathurrahman</h3></a><a class='profile-card' href='profiles/teman-53.html'>
+                    <img src='assets/images/52.jpg'>
+                <h3>Yusa</h3></a><a class='profile-card' href='profiles/teman-53.html'>
                     <img src='assets/images/teman-53.jpg'>
                 <h3>Zahra Junita</h3>
             </a>
