--- a/profiles/teman-06.html
+++ b/profiles/teman-06.html
@@ -2,7 +2,7 @@
 <title>Annisa Nur Hasanah </title><link rel="stylesheet" href="../style.css"></head><body>
 <header><div class="container"><h1>Profil Annisa </h1></div></header>
 <main class="container"><section class="personal-profile">
-<img src="../assets/images/teman-01.jpg" alt="Nama Lengkap 1">
+<img src="../assets/images/6_Bebas.jpg" alt="Nama Lengkap 1">
 <h2>Annisa Nur Hasanah </h2>
 <p><strong>Fakultas:</strong> Biologi</p>
 <p><strong>Program Studi:</strong> Biologi</p>
