--- a/profiles/teman-18.html
+++ b/profiles/teman-18.html
@@ -2,7 +2,7 @@
 <title>Ikhsan Jati Ramadhan </title><link rel="stylesheet" href="../style.css"></head><body>
 <header><div class="container"><h1>Profil Ikhsan </h1></div></header>
 <main class="container"><section class="personal-profile">
-<img src="../assets/images/teman-01.jpg" alt="Nama Lengkap 1">
+<img src="../assets/images/18_BEBAS.jpg" alt="Nama Lengkap 1">
 <h2>Ikhsan Jati Ramadhan </h2>
 <p><strong>Fakultas:</strong> Geografi</p>
 <p><strong>Program Studi:</strong> Kartografi dan Pengideraan Jarak Jauh</p>
