--- a/profiles/teman-22.html
+++ b/profiles/teman-22.html
@@ -2,9 +2,9 @@
 <title>Khairul Astaman Gea </title><link rel="stylesheet" href="../style.css"></head><body>
 <header><div class="container"><h1>Profil Khairul </h1></div></header>
 <main class="container"><section class="personal-profile">
-<img src="../assets/images/teman-01.jpg" alt="Nama Lengkap 1">
+<img src="../assets/images/22_bebas.jpg" alt="Nama Lengkap 1">
 <h2>Khairul Astaman Gea </h2>
-<p><strong>Fakultas:</strong> Sekolak Vokasi</p>
+<p><strong>Fakultas:</strong> Sekolah Vokasi</p>
 <p><strong>Program Studi:</strong> Perbankan</p>
 <div class="audio-player"><audio controls autoplay src="../assets/audio/22.mp3"></audio></div>
 <div class="social-links">
