--- a/profiles/teman-29.html
+++ b/profiles/teman-29.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html><html lang="id"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Profil Nama Lengkap </title><link rel="stylesheet" href="../style.css"></head><body>
-<header><div class="container"><h1>Profil Teman </h1></div></header>
+<title>Muhammad Alvin Arasy </title><link rel="stylesheet" href="../style.css"></head><body>
+<header><div class="container"><h1>Profil Alvin </h1></div></header>
 <main class="container"><section class="personal-profile">
 <img src="../assets/images/teman-01.jpg" alt="Nama Lengkap 1">
-<h2>Nama Lengkap </h2>
+<h2>Muhammad Alvin Arasy </h2>
 <p><strong>Fakultas:</strong> -</p>
 <p><strong>Program Studi:</strong> —</p>
 <div class="audio-player"><audio controls autoplay src="../assets/audio/teman-01.mp3"></audio></div>
