--- a/profiles/teman-44.html
+++ b/profiles/teman-44.html
@@ -2,11 +2,11 @@
 <title>Riqqah Nur Hasanah </title><link rel="stylesheet" href="../style.css"></head><body>
 <header><div class="container"><h1>Profil Riqqah </h1></div></header>
 <main class="container"><section class="personal-profile">
-<img src="../assets/images/teman-01.jpg" alt="Nama Lengkap 1">
+<img src="../assets/images/44_bebas_3.JPG" alt="Nama Lengkap 1">
 <h2>Riqqah Nur Hasanah </h2>
 <p><strong>Fakultas:</strong> Kedokteran Hewan</p>
 <p><strong>Program Studi:</strong> Kedokteran Hewan</p>
-<div class="audio-player"><audio controls autoplay src="../assets/audio/teman-01.mp3"></audio></div>
+<div class="audio-player"><audio controls autoplay src="../assets/audio/44.mp3"></audio></div>
 <div class="social-links">
 <a href="https://instagram.com/ratiosstudent" target="_blank">Instagram</a>
 <a href="https://tiktok.com/@username" target="_blank">TikTok</a>
