--- a/profiles/teman-47.html
+++ b/profiles/teman-47.html
@@ -2,7 +2,7 @@
 <title>Shafa Ainy Haseena Adaby </title><link rel="stylesheet" href="../style.css"></head><body>
 <header><div class="container"><h1>Shafa </h1></div></header>
 <main class="container"><section class="personal-profile">
-<img src="../assets/images/teman-01.jpg" alt="Nama Lengkap 1">
+<img src="../assets/images/47.JPG" alt="Nama Lengkap 1">
 <h2>Shafa Ainy Haseena Adaby</h2>
 <p><strong>Fakultas:</strong> Pertanian</p>
 <p><strong>Program Studi:</strong> Manajemen Sumberdaya Akuatik</p>
