--- a/profiles/teman-10.html
+++ b/profiles/teman-10.html
@@ -2,15 +2,15 @@
 <title>Devyana Mega Permatasari </title><link rel="stylesheet" href="../style.css"></head><body>
 <header><div class="container"><h1>Profil Vyaa </h1></div></header>
 <main class="container"><section class="personal-profile">
-<img src="../assets/images/teman-01.jpg" alt="Nama Lengkap 1">
+<img src="../assets/images/10_bebas.JPG" alt="Nama Lengkap 1">
 <h2>Devyana Mega Permatasari </h2>
 <p><strong>Fakultas:</strong> Peternakan</p>
 <p><strong>Program Studi:</strong> Ilmu dan Industri Peternakan</p>
-<div class="audio-player"><audio controls autoplay src="../assets/audio/teman-01.mp3"></audio></div>
+<div class="audio-player"><audio controls autoplay src="../assets/audio/10.mp3"></audio></div>
 <div class="social-links">
-<a href="https://instagram.com/username" target="_blank">Instagram</a>
-<a href="https://tiktok.com/@username" target="_blank">TikTok</a>
-<a href="https://wa.me/6281234567890" target="_blank">WhatsApp</a>
+<a href="https://instagram.com/depapipo" target="_blank">Instagram</a>
+<a href="https://tiktok.com/@sungchanugm" target="_blank">TikTok</a>
+<a href="https://wa.me/6285785479223" target="_blank">WhatsApp</a>
 </div>
 <a href="../friends.html" class="btn-back" onclick="localStorage.setItem('bgMusic','play')">Kembali</a>
 </section></main>
