--- a/profiles/teman-36.html
+++ b/profiles/teman-36.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html><html lang="id"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Profil Nama Lengkap </title><link rel="stylesheet" href="../style.css"></head><body>
-<header><div class="container"><h1>Profil Teman </h1></div></header>
+<title>Nanda Novita Az Zahra </title><link rel="stylesheet" href="../style.css"></head><body>
+<header><div class="container"><h1>Profil Nanda </h1></div></header>
 <main class="container"><section class="personal-profile">
-<img src="../assets/images/teman-01.jpg" alt="Nama Lengkap 1">
-<h2>Nama Lengkap </h2>
-<p><strong>Fakultas:</strong> -</p>
-<p><strong>Program Studi:</strong> —</p>
-<div class="audio-player"><audio controls autoplay src="../assets/audio/teman-01.mp3"></audio></div>
+<img src="../assets/images/36_bebas.jpg" alt="Nama Lengkap 1">
+<h2>Nanda Novita Az Zahra </h2>
+<p><strong>Fakultas:</strong> Pertanian</p>
+<p><strong>Program Studi:</strong> Penyuluhan dan Komunikasi Pertanian</p>
+<div class="audio-player"><audio controls autoplay src="../assets/audio/36.mp3"></audio></div>
 <div class="social-links">
-<a href="https://instagram.com/username" target="_blank">Instagram</a>
-<a href="https://tiktok.com/@username" target="_blank">TikTok</a>
-<a href="https://wa.me/6281234567890" target="_blank">WhatsApp</a>
+<a href="https://instagram.com/nandaneovita" target="_blank">Instagram</a>
+<a href="https://tiktok.com/@nan0w_" target="_blank">TikTok</a>
+<a href="https://wa.me/6282135643035" target="_blank">WhatsApp</a>
 </div>
 <a href="../friends.html" class="btn-back" onclick="localStorage.setItem('bgMusic','play')">Kembali</a>
 </section></main>
