nambah foto juni

--- a/profiles/teman-53.html
+++ b/profiles/teman-53.html
@@ -2,7 +2,7 @@
 <title>Zahra Junita </title><link rel="stylesheet" href="../style.css"></head><body>
 <header><div class="container"><h1>Profil Juni </h1></div></header>
 <main class="container"><section class="personal-profile">
-<img src="../assets/images/teman-01.jpg" alt="Nama Lengkap 1">
+<img src="../assets/images/53_bebas.jpg" alt="Nama Lengkap 1">
 <h2>Zahra Junita </h2>
 <p><strong>Fakultas:</strong> Sekolah Vokasi</p>
 <p><strong>Program Studi:</strong> Sistem Informasi Geografis</p>
